--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,10 @@
         android:id="@+id/images"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/androidparty"
-        android:layout_below="@+id/smart"/>
+        android:src="@drawable/beauty"
+        android:layout_below="@+id/smart"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="10dp"/>
 
 
 
